--- a/app/assets/javascripts/templates/activities.hbs
+++ b/app/assets/javascripts/templates/activities.hbs
@@ -3,7 +3,7 @@
 <p class="text-warning">Don't overdue it! We all need to rest once in a while</p>
 <hr>
 {{#if isCurrentUser}}
-  {{#linkTo "activities.create" class="btn btn-success"}}New Activity{{/linkTo}}
+  {{#linkTo "activities.create" name="New Activity" class="btn btn-success"}}New Activity{{/linkTo}}
 {{/if}}
 
 {{outlet}}
