--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -55,11 +55,13 @@
         </ul>
       {{else}}
         <ul class="nav">
-          {{#if isAddingExercise}}
-            <p>Saving...</p>
-          {{else}}
-            {{render "exercises"}}
-          {{/if}}
+          {{#unless started}}
+            {{#if isAddingExercise}}
+              <p>Saving...</p>
+            {{else}}
+              {{render "exercises"}}
+            {{/if}}
+          {{/unless}}
         </ul>
       {{/each}}
     {{else}}
