--- a/app/assets/javascripts/templates/user/activities.hbs
+++ b/app/assets/javascripts/templates/user/activities.hbs
@@ -2,6 +2,6 @@
 
 <ul class="nav nav-pills">
   {{#each controller}}
-    <li>{{#linkTo "activity" this}}Activity{{/linkTo}}</li>
+    <li>{{#link-to "activity" this}}Activity{{/link-to}}</li>
   {{/each}}
 </ul>
