--- a/app/assets/javascripts/templates/users.hbs
+++ b/app/assets/javascripts/templates/users.hbs
@@ -3,7 +3,7 @@
     <h1>Users</h1>
     <ul class="nav">
     {{#each controller}}
-      <li>{{#linkTo "user" this}}{{email}}{{/linkTo}}</li>
+      <li>{{#link-to "user" this}}{{email}}{{/link-to}}</li>
     {{/each}}
     </ul>
   </div>
