--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-md-8">
     <ul class="nav nav-pills nav-justified">
-      <li>{{#linkTo "activities"}}Activities{{/linkTo}}</li>
-      <li>{{#linkTo "user.competitions"}}Competitions{{/linkTo}}</li>
-      <li>{{#linkTo "user.challenges"}}Challenges{{/linkTo}}</li>
+      <li>{{#link-to "activities"}}Activities{{/link-to}}</li>
+      <li>{{#link-to "user.competitions"}}Competitions{{/link-to}}</li>
+      <li>{{#link-to "user.challenges"}}Challenges{{/link-to}}</li>
       {{#if isCurrentUser}}
-      <li>{{#linkTo "user.edit"}}Settings{{/linkTo}}</li>
+      <li>{{#link-to "user.edit"}}Settings{{/link-to}}</li>
       {{/if}}
     </ul>
 
