--- a/app/assets/javascripts/templates/activity/edit.hbs
+++ b/app/assets/javascripts/templates/activity/edit.hbs
@@ -10,7 +10,7 @@
   <br />
   <div class="row activity-edit">
     {{#if useReps}}
-    <div class="form-group">
+    <div {{bindAttr class=":form-group errors.reps:has-error:"}}>
       <label class= "col-sm-3 control-label">Reps</label>
       <div class="col-sm-9">
         {{input value=reps name="Reps" classNames="form-control" placeholder=selectedExercise.measurement}}
@@ -18,10 +18,9 @@
       </div>
     </div>
     {{/if}}
-    {{#if errors.reps}}<span class="help-block">{{errors.reps}}</span>{{/if}}
 
     {{#if useDistance}}
-    <div class="form-group">
+    <div {{bindAttr class=":form-group errors.distance:has-error:"}}>
       <label class= "col-sm-3 control-label">Distance</label>
       <div class="col-sm-9">
         {{input value=distance name="Distance" classNames="form-control" placeholder=selectedExercise.measurement}}
@@ -30,7 +29,7 @@
     {{/if}}
 
     {{#if useDuration}}
-    <div class="form-group">
+    <div {{bindAttr class=":form-group errors.duration:has-error:"}}>
       <label class= "col-sm-3 control-label">Duration</label>
       <div class="col-sm-9">
         {{input value=duration name="Duration" classNames="form-control" placeholder=selectedExercise.measurement}}
@@ -39,7 +38,7 @@
     {{/if}}
 
     {{#if useCalories}}
-    <div class="form-group">
+    <div {{bindAttr class=":form-group errors.calories:has-error:"}}>
       <label class= "col-sm-3 control-label">Calories</label>
       <div class="col-sm-9">
         {{input value=calories name="Calories" classNames="form-control" placeholder=selectedExercise.measurement}}
@@ -48,7 +47,7 @@
     {{/if}}
 
     {{#if useWeight}}
-    <div class="form-group">
+    <div {{bindAttr class=":form-group errors.weight:has-error:"}}>
       <label class= "col-sm-3 control-label">Weight</label>
       <div class="col-sm-9">
         {{input value=weight name="Weight" classNames="form-control" placeholder=selectedExercise.measurement}}
