update modal and add success message

--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -16,7 +16,7 @@
         <li>{{#link-to "users"}}Users{{/link-to}}</li>
         <li>{{#link-to "competitions"}}Competitions{{/link-to}}</li> 
         <li>{{#link-to "challenges"}}Challenges{{/link-to}}</li>   
-        <li><a href="#" {{action open 'log_activity'}}>Log Activity</a></li>
+        <li><a href="#" {{action logActivity}}>Log Activity</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>{{#link-to "contact"}}Contact us{{/link-to}}</li>
