--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -52,6 +52,17 @@
 
     <div class="row">
       <div class="form-group">
+        <label class= "col-sm-4 control-label">Description</label>
+        <div class="col-sm-8">
+          {{view Ember.TextArea value=this.model.description classNames="form-control" name="Max Participants"}}
+        </div>
+      </div>
+    </div>
+
+    <br />
+
+    <div class="row">
+      <div class="form-group">
         <label class= "col-sm-4 control-label">Private</label>
         <div class="col-sm-8">
           {{view Ember.Checkbox checkedBinding="isPrivate"}}
