adds description to competition page

--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -92,7 +92,7 @@
       {{else}}
         <p>This is a public competition</p>
       {{/if}}
-      <p>Active: {{active}}</p>
+      <p>Description: {{description}}</p>
       <p>Reward: {{reward}}</p>
       <br />
     </div>
