--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -108,6 +108,8 @@
             {{/if}}
           </li>
         </ul>
+      {{else}}
+        <p class='info-text'>No exercises have been added to this competition.</p>
       {{/each}}
     </div>
 
