--- a/app/assets/javascripts/templates/competition/edit.hbs
+++ b/app/assets/javascripts/templates/competition/edit.hbs
@@ -54,7 +54,7 @@
       <div class="form-group">
         <label class= "col-sm-4 control-label">Description</label>
         <div class="col-sm-8">
-          {{view Ember.TextArea value=this.model.description classNames="form-control" name="Max Participants"}}
+          {{view Ember.TextArea value=this.model.description classNames="form-control" name="Description"}}
         </div>
       </div>
     </div>
