adds modal functionality

--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -32,6 +32,7 @@
   <br />
   <br />
   {{outlet modal}}
+  {{view WorkoutWars.FlashView model=WorkoutWars.flash}}
   {{outlet}}
   <br />
   <br />
