--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-md-6">
       <h4>Information</h4>
-      <p>Creator: {{creator.email}}</p>
+      <p>Creator: {{user.email}}</p>
       <p>Start Date: {{date startDate}}</p>
       <p>End Date: {{date endDate}}</p>
       <p>Max Participants: {{numOfParticipants}}</p>
@@ -82,7 +82,7 @@
   <div class="row">
     <div class="col-md-4">
       <h4>Information</h4>
-      <p>Creator: {{creator.email}}</p>
+      <p>Creator: {{user.email}}</p>
       <p>Start Date: {{date startDate}}</p>
       <p>End Date: {{date endDate}}</p>
       <p>Max Participants: {{numOfParticipants}}</p>
