--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -35,7 +35,7 @@
     <hr>
     {{#if rank}}<h4>Rank: {{rank}}</h4>{{/if}}
     <h5>User: {{this.user.email}}</h5>
-    <h5>Total Experience: {{totalExperience}}</h5>          
+    <h5>Total: {{total}}</h5>          
   {{/each}}
   {{!-- End Started Template --}}
 {{else}}
