--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -1,10 +1,8 @@
-<h3>Competitions</h3>
-<p>Competitions are the <strong>best way to get great results</strong>. They will motivate you to workout harder than you have ever been motivated before.</p>
-<p class="text-warning">There can be only one winner!</p>
-<br />
 <div class="row">
-  <div class="col-md-4">
-    {{#link-to "competitions.create" class="btn btn-lg btn-success btn-block"}}New Competition{{/link-to}}
+  <div class="col-md-3">
+    <hr>
+    {{#link-to "competitions.create" class="btn btn-success btn-block"}}New Competition{{/link-to}}
+    <hr>
     <h4>Active Competitions</h4>
     <ul class="nav">
     {{#each controller}}
@@ -19,7 +17,7 @@
     </ul>
   </div>
 
-  <div class="col-md-8">
+  <div class="col-md-9">
     {{outlet}}
   </div>
 </div>
