break up competition into partials

--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -20,7 +20,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>{{#link-to "contact"}}Contact us{{/link-to}}</li>
-        <li>{{#link-to "user.edit" currentUser}}Settings{{/link-to}}</li>
+        <li>{{#link-to "user.edit" currentUser}}<span class="glyphicon glyphicon-cog">Settings</span>{{/link-to}}</li>
         <li><a href="/users/sign_out" data-method="delete" id='sign_out_button'>Sign out</a></li>
       </ul>
     </div><!--/.nav-collapse -->
