--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -3,18 +3,20 @@
     <hr>
     {{#link-to "competitions.create" class="btn btn-success btn-block"}}New Competition{{/link-to}}
     <hr>
-    <h4>Active Competitions</h4>
-    <ul class="nav">
-    {{#each controller}}
-      {{#unless isDirty}}
-      <li>
-        {{#link-to "competition" this}}{{name}}{{/link-to}}
-      </li>
-      {{/unless}}
-    {{else}}
-      <li>There are no competitions.</li>
-    {{/each}}
-    </ul>
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Active Competitions</h3>
+      </div>
+      <div class="list-group">
+        {{#each controller}}
+          {{#unless isDirty}}
+            {{#link-to "competition" this class="list-group-item"}}{{name}}{{/link-to}}
+          {{/unless}}
+        {{else}}
+          <a href="#" class="list-group-item">There are no competitions.</a>
+        {{/each}}
+      </div>
+    </div>
   </div>
 
   <div class="col-md-9">
