--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -12,7 +12,7 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>{{#link-to "user" currentUser}}Profile{{/link-to}}</li>
+        <li>{{#link-to "profile" currentUser}}Profile{{/link-to}}</li>
         <li>{{#link-to "users"}}Users{{/link-to}}</li>
         <li>{{#link-to "competitions"}}Competitions{{/link-to}}</li> 
         <li>{{#link-to "challenges"}}Challenges{{/link-to}}</li>   
@@ -20,7 +20,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>{{#link-to "contact"}}Contact us{{/link-to}}</li>
-        <li>{{#link-to "user.edit" currentUser}}<span class="glyphicon glyphicon-cog">Settings</span>{{/link-to}}</li>
+        <li>{{#link-to "profile.edit" currentUser}}<span class="glyphicon glyphicon-cog">Settings</span>{{/link-to}}</li>
         <li><a href="/users/sign_out" data-method="delete" id='sign_out_button'>Sign out</a></li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -28,6 +28,7 @@
 </div>
 
 <div class="container">
+  <br />
   <br />
   <br />
   <br />
