--- a/app/assets/javascripts/templates/competitions/index.hbs
+++ b/app/assets/javascripts/templates/competitions/index.hbs
@@ -1,4 +1,11 @@
-<h3>Competitions</h3>
-<p>Competitions are the <strong>best way to get great results</strong>. They will motivate you to workout harder than you have ever been motivated before.</p>
-<p class="text-warning">There can be only one winner!</p>
-<p class="text-success">Select one from the left</p>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">Competitions</h3>
+  </div>
+  <div class="panel-body">
+    <p>Competitions are the <strong>best way to get great results</strong>. They will motivate you to workout harder than you have ever been motivated before.</p>
+    <p class="text-warning">There can be only one winner!</p>
+    <p class="text-success">Select one from the left</p>
+  </div>
+</div>
+
