--- a/app/assets/javascripts/templates/users.hbs
+++ b/app/assets/javascripts/templates/users.hbs
@@ -1,12 +1,21 @@
 <div class="row">
   <div class="col-md-3">
-    <h1>Users</h1>
-    <ul class="nav">
-    {{#each controller}}
-      <li>{{#link-to "user" this}}{{email}}{{/link-to}}</li>
-    {{/each}}
-    </ul>
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Users</h3>
+      </div>
+      <div class="list-group">
+        {{#each controller}}
+          {{#unless isDirty}}
+            {{#link-to "user" this class="list-group-item"}}{{email}}{{/link-to}}
+          {{/unless}}
+        {{else}}
+          <a href="#" class="list-group-item">There are no competitions.</a>
+        {{/each}}
+      </div>
+    </div>
   </div>
+
   <div class="col-md-9">
     {{outlet}}
   </div>
