--- a/app/assets/javascripts/templates/users.hbs
+++ b/app/assets/javascripts/templates/users.hbs
@@ -2,7 +2,7 @@
   <div class="col-md-3">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title">Users</h3>
+        {{#link-to 'users'}}<h3 class="panel-title">Users</h3>{{/link-to}}
       </div>
       <div class="list-group">
         {{#each controller}}
