--- a/app/assets/javascripts/templates/activity.hbs
+++ b/app/assets/javascripts/templates/activity.hbs
@@ -1,25 +1,26 @@
-<div class="pull-right">          
-  <a href="#" class="btn btn-danger" {{action delete this}}>Delete</a>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">Activity Details</h3>
+  </div>
+    <div class="panel-body">        
+      <a href="#" class="btn btn-danger pull-right" {{action delete this}}>Delete</a>
+      <h2>{{exercise.name}}</h2>
+      {{#if exercise.reps}}
+        <p>Reps: {{reps}}</p>
+      {{/if}}
+      {{#if exercise.distance}}
+        <p>Distance: {{distance}}</p>
+      {{/if}}
+      {{#if exercise.duration}}
+        <p>Duration: {{duration}}</p>
+      {{/if}}
+      {{#if exercise.calories}}
+        <p>Calories: {{calories}}</p>
+      {{/if}}
+      {{#if exercise.weight}}
+        <p>Weigth: {{weight}}</p>
+      {{/if}}
+      <p>Created At: {{date createdAt}}</p>
+    </div>
+  </div>
 </div>
-
-<h2>{{exercise.name}}</h2>
-
-{{#if exercise.reps}}
-  <p>Reps: {{reps}}</p>
-{{/if}}
-{{#if exercise.distance}}
-  <p>Distance: {{distance}}</p>
-{{/if}}
-{{#if exercise.duration}}
-  <p>Duration: {{duration}}</p>
-{{/if}}
-{{#if exercise.calories}}
-  <p>Calories: {{calories}}</p>
-{{/if}}
-{{#if exercise.weight}}
-  <p>Weigth: {{weight}}</p>
-{{/if}}
-<p>Created At: {{date createdAt}}</p>
-<br />
-{{outlet}}
-
