--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -8,20 +8,54 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      {{#link-to "index" classNames="navbar-brand"}}WorkoutWars{{/link-to}}
+      {{#link-to "index" classNames="navbar-brand"}}<img src="/assets/ww-logo-large.png" height="22"></img> {{/link-to}}
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>{{#link-to "profile" currentUser}}Profile{{/link-to}}</li>
-        <li>{{#link-to "users"}}Users{{/link-to}}</li>
-        <li>{{#link-to "competitions"}}Competitions{{/link-to}}</li> 
-        <li>{{#link-to "challenges"}}Challenges{{/link-to}}</li>   
-        <li><a href="#" {{action logActivity}}>Log Activity</a></li>
+        <li>
+          {{#link-to "profile" currentUser}}
+            <span class="badge"><span class="glyphicon glyphicon-user"></span></span>
+            Profile
+          {{/link-to}}
+        </li>
+        <li>
+          {{#link-to "users"}}
+            <span class="badge"><span class="glyphicon glyphicon-eye-open"></span></span>
+            Users            
+          {{/link-to}}
+        </li>
+        <li>
+          {{#link-to "competitions"}}
+            <span class="badge"><span class="glyphicon glyphicon-star-empty"></span></span>
+            Competitions
+          {{/link-to}}
+        </li> 
+        <li>
+          {{#link-to "challenges"}}
+            <span class="badge"><span class="glyphicon glyphicon-star"></span></span>
+            Challenges
+          {{/link-to}}
+        </li>   
+        <li>
+          <a href="#" {{action logActivity}}>
+            <span class="badge"><span class="glyphicon glyphicon-certificate"></span></span>
+            Log Activity
+          </a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li>{{#link-to "contact"}}Contact us{{/link-to}}</li>
-        <li>{{#link-to "profile.edit" currentUser}}<span class="glyphicon glyphicon-cog">Settings</span>{{/link-to}}</li>
-        <li><a href="/users/sign_out" data-method="delete" id='sign_out_button'>Sign out</a></li>
+        <li>
+          {{#link-to "contact"}}
+            <span class="badge"><span class="glyphicon glyphicon-send"></span></span>
+            Contact us
+          {{/link-to}}
+        </li>
+        <li>
+          <a href="/users/sign_out" data-method="delete" id='sign_out_button'>
+            <span class="badge"><span class="glyphicon glyphicon-off"></span></span>
+            Sign out
+          </a>
+        </li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
