--- a/app/assets/javascripts/templates/contact.hbs
+++ b/app/assets/javascripts/templates/contact.hbs
@@ -1,34 +1,8 @@
-<!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
-  <div class="container">
-    <h1>Contact Us</h1>
-    <p>We would love to hear feedback</p>
+<div class="panel panel-primary">
+  <div class="panel-body">
+    <div class="jumbotron">
+      <h1>Contact Us</h1>
+      <p>We would love to hear feedback</p>
+    </div>  
   </div>
 </div>
-
-<div class="container">
-  <!-- Example row of columns -->
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Competitions</h2>
-      <p>Competitions are where you go to prove what you are made of. Nothing pushes a workout like a good friendly competition. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Challenges</h2>
-      <p>Not the competitive type? Challenges are a way for you to compete against yourself. The only goal is to keep getting better. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-   </div>
-    <div class="col-md-4">
-      <h2>Teams</h2>
-      <p>Teams can add an additional element. You can join team competitions which you and your team can compete against other teams. Or you can join team challenges where as a group you try to compelete a set goal.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-  </div>
-
-  <hr>
-
-  <footer>
-    <p>&copy; Company 2013</p>
-  </footer>
-</div> <!-- /container -->
