--- a/app/assets/javascripts/templates/profile/index.hbs
+++ b/app/assets/javascripts/templates/profile/index.hbs
@@ -1,50 +1,16 @@
-<div class="row">
-  <div class="col-md-8">
-    <ul class="nav nav-pills nav-justified">
-      <li>{{#link-to "activities"}}Activities{{/link-to}}</li>
-      <li>{{#link-to "profile.competitions"}}Competitions{{/link-to}}</li>
-      <li>{{#link-to "profile.challenges"}}Challenges{{/link-to}}</li>
-      <li>{{#link-to "profile.edit"}}Settings{{/link-to}}</li>
-    </ul>
-
-    {{outlet}}
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">Profile</h3>
   </div>
-
-  <div class="col-md-4">
-    {{#if name}}
-      <h1>{{name}}</h1>
-      <hr>
-      <p>Email: {{email}}</p>
-    {{else}}
-      <h1>{{email}}</h1>
-      <hr>
-    {{/if}}
-
-    {{#if nickname}}
-      <p>Nickname: {{nickname}}</p>
-    {{/if}}
-
-    {{#if age}}
-      <p>Age: {{age}}</p>
-    {{/if}}
-
-    {{#if height}}
-      <p>Height: {{height}}</p>
-    {{/if}}
-
-    {{#if weight}}
-      <p>Weight: {{weight}}</p>
-    {{/if}}
-
-    {{#if level}}
-      <p>Level: {{level}}</p>
-    {{/if}}
-
-    {{#if experience}}
-      <p>Experience: {{experience}}</p>
-    {{/if}}
-
-    {{#if nextLevelExperience}}
-      <p>Experience to next level: {{nextLevelExperience}}</p>
-    {{/if}}
+  <div class="panel-body">
+    <p>Name: {{name}}
+    <p>Email: {{email}}</p>
+    <p>Nickname: {{nickname}}</p>
+    <p>Age: {{age}}</p>
+    <p>Height: {{height}}</p>
+    <p>Weight: {{weight}}</p>
+    <p>Level: {{level}}</p>
+    <p>Experience: {{experience}}</p>
+    <p>Experience to next level: {{nextLevelExperience}}</p>
   </div>
+</div>
