adds logo to home page

--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -1,7 +1,7 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
   <div class="container">
-    <h1>Welcome to Workout Wars</h1>
+    <img src="/assets/ww-logo-large.png">
     <p>Are you ready to push your body to the max?</p>
   </div>
 </div>
@@ -24,10 +24,4 @@
       <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
     </div>
   </div>
-
-  <hr>
-
-  <footer>
-    <p>&copy; Company 2013</p>
-  </footer>
 </div> <!-- /container -->
