changes index page

--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -1,27 +1,51 @@
-<!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
-  <div class="container">
-    <img src="/assets/ww-logo-large.png">
-    <p>Are you ready to push your body to the max?</p>
+<div class="container">
+  <div class="jumbotron">
+    <img src="/assets/ww-logo-large.png" />
+    <p>Get ready to take your fitness to the next level.</p>
   </div>
 </div>
-<div class="container">
-  <!-- Example row of columns -->
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Competitions</h2>
-      <p>Competitions are where you go to prove what you are made of. Nothing pushes a workout like a good friendly competition. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+
+<!-- Marketing messaging and featurettes
+================================================== -->
+<!-- Wrap the rest of the page in another container to center all the content. -->
+
+<div class="container marketing">
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Get the results you want. <span class="text-muted"> Compete to Win.</span></h2>
+      <p class="lead">Get fit while having fun competing with your friends and challenging yourself to achieve new levels of fitness. Whatever your fitness goals are the key to achieving results is consistency. We keep you motivated by using your friends and others on the site to challenge you to keep going. We're leveraging postive peer presure to keep you in the game.</p>
     </div>
-    <div class="col-md-4">
-      <h2>Challenges</h2>
-      <p>Not the competitive type? Challenges are a way for you to compete against yourself. The only goal is to keep getting better. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-   </div>
-    <div class="col-md-4">
-      <h2>Teams</h2>
-      <p>Teams can add an additional element. You can join team competitions which you and your team can compete against other teams. Or you can join team challenges where as a group you try to compelete a set goal.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+    <div class="col-md-5">
+      <img src="/assets/small-home1.jpg", alt: "Generic Image", class="featurette-image img-responsive" />
     </div>
   </div>
-</div> <!-- /container -->
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-5">
+      <img src="/assets/small-home2.jpg", alt: "Generic Image", class="featurette-image img-responsive" />
+    </div>
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">Challenge Yourself.</span></h2>
+      <p class="lead">Challenge yourself to reach your fitness goals. If competing against others isn't your thing then just compete against yourself in personal challenges. Choose one of the pre-defined challenges or create your own and see your progress over time. Need additional motivation, make your challenge public and see how others compare.</p>
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Acheive your goals. <span class="text-muted">Your Way.</span></h2>
+      <p class="lead">Whatever your goals, whatever your motivational needs, we've got you covered. Get started and start seeing the results. Your body with thank you. </p>
+    </div>
+    <div class="col-md-5">
+      <img src="/assets/small-home3.jpg", alt: "Generic Image", class="featurette-image img-responsive" />
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <!-- /END THE FEATURETTES -->
+
+</div><!-- /.container -->
